Fix campaign styles namespacing

--- a/app/assets/stylesheets/static-pages/campaigns.scss
+++ b/app/assets/stylesheets/static-pages/campaigns.scss
@@ -2,11 +2,13 @@
 @import "../styleguide/_font-stacks";
 @import "../styleguide/_typography";
 
-.campaign section#content{
+section.campaign {
+  &#content {
+    background-color: #fff;
+    padding-bottom: 3em;
+  }
 
-  padding-bottom: 3em;
-
-  &#extra-links {
+  #extra-links {
     float: left;
     margin-left: 2em;
     max-width: 960px;
@@ -27,7 +29,7 @@
     }
   }
 
-  &#landing {
+  #landing {
     position: relative;
     display: block;
     max-width: 960px;
